# forsaken_lands

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  agents.md  assets_id_mappings.md  game_features.md  gemini_docker.ps1  progress.md  refactor.md  research.md  wasm_feasibility_study.md  wasm_support_impl_plan.md
.Jules/: palette.md  scribe.md
.agent/rules/: development.md
.agent/workflows/: bevy_0.17_api.md  bevy_0.18_api.md
.jules/: scribe.md
assets/: default.spawn_table.ron  research.scn.ron  spawn_table_default.scn.ron  startup.scn.ron
assets/blessings/: boss_worg_rider_doom.blessing.ron  monster_life.blessing.ron  spawn_rate.blessing.ron
assets/recipes/: bone_bow.recipe.ron  bone_dust.recipe.ron  bone_idol.recipe.ron  bone_idol_ii.recipe.ron  bone_sword.recipe.ron  hardened_bone.recipe.ron  library.scn.ron  primitive_sling.recipe.ron  wooden_bow.recipe.ron
assets/research/: 001_invaders.research.ron  002_b_portal_discovery.research.ron  002_corpse_scavenging.research.ron  003_a_bone_crafting.research.ron  003_a_simple_crafting.research.ron  003_c_xykego.research.ron  004_a_bone_sword.research.ron  004_b_sling.research.ron  004_c_xykego.research.ron  005_a_hardened_bones.research.ron  005_c_a_vision.research.ron  005_portal_discovery.research.ron  006_a_theology_i.research.ron  006_b_invaders_ii.research.ron  006_bone_idol.research.ron  007_a_vision_i.research.ron  007_b_bone_crafting.research.ron  008_bone_idol.research.ron  autopsy_boss_worg_rider.research.ron  autopsy_elite_goblin_scout.research.ron  autopsy_goblin.research.ron  autopsy_goblin_archer.research.ron  autopsy_goblin_defender.research.ron  autopsy_goblin_rider.research.ron  autopsy_goblin_scout.research.ron  autopsy_goblin_warrior.research.ron  autopsy_hobgoblin_mauler.research.ron  autopsy_orc_elite.research.ron  autopsy_orc_hunter.research.ron  autopsy_siled.research.ron  autopsy_siled_alpha.research.ron  autopsy_worg.research.ron  autopsy_worg_alpha.research.ron  basic_archery.research.ron  bone_bow.research.ron  bone_crafting.research.ron  bone_idol.research.ron  bone_pile.research.ron  bone_pile_ii.research.ron  bone_sword.research.ron  (+12 more)
assets/saves/: save_2026-01-19_08-15-17.scn.ron  save_2026-01-19_08-15-29.scn.ron  save_2026-01-19_12-21-44.scn.ron  save_2026-01-19_21-32-00.scn.ron  save_2026-01-19_21-35-38.scn.ron  save_2026-01-19_21-54-17.scn.ron
assets/skills/: fireball.skill.ron  heal.skill.ron  iron_skin.skill.ron  regeneration.skill.ron  thorns.skill.ron  totem_base_damage.skill.ron
assets/stats/: autopsy_boss_orc_warlord.stats.ron  autopsy_boss_worg_rider.stats.ron  autopsy_cave_troll.stats.ron  autopsy_elite_goblin_scout.stats.ron  autopsy_goblin.stats.ron  autopsy_goblin_archer.stats.ron  autopsy_goblin_defender.stats.ron  autopsy_goblin_rider.stats.ron  autopsy_goblin_scout.stats.ron  autopsy_goblin_warrior.stats.ron  autopsy_orc_elite.stats.ron  autopsy_orc_grunt.stats.ron  autopsy_orc_hound.stats.ron  autopsy_orc_hunter.stats.ron  autopsy_orc_shaman.stats.ron  autopsy_orc_warrior.stats.ron  autopsy_siled.stats.ron  autopsy_siled_alpha.stats.ron  autopsy_worg.stats.ron  autopsy_worg_alpha.stats.ron  bone_weapons_upgrade.stats.ron  boss_worg_rider_doom.stats.ron  boss_worg_riders_doom.stats.ron  elite_goblin_scout_autopsy.stats.ron  sharp_rocks.stats.ron
assets/unlocks/: bone_sword.unlock.ron  construction_bone_idol.unlock.ron  invaders_research.unlock.ron  recipe_bone_idol.unlock.ron  recipe_bone_sword.unlock.ron  research_bone_weaponry.unlock.ron  research_invaders.unlock.ron  research_theology_i.unlock.ron  test.ron  test.unlock.ron  test_2.unlock.ron
assets/weapons/: bone_bow.weapon.ron  bone_sword.weapon.ron  melee_rock.weapon.ron  primitive_sling.weapon.ron  throwing_rock.weapon.ron  wooden_bow.weapon.ron
blessings/: Cargo.toml
blessings/src/: lib.rs
bonus_stats/: Cargo.toml  README.md
bonus_stats/src/: events.rs  lib.rs  plugin.rs
buildings/: Cargo.toml
buildings/src/: lib.rs  the_maw.rs
buildings/totem/: Cargo.toml
buildings/totem/src/: lib.rs
components/buildings_components/: Cargo.toml
components/crafting_components/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  systems.rs
crafting/: Cargo.toml
crafting/src/: lib.rs  systems.rs
game_assets/: Cargo.toml
game_assets/weapon_assets/: Cargo.toml
game_assets/weapon_assets/src/: lib.rs  spawner.rs
growth/: Cargo.toml
heroes/: Cargo.toml
heroes/src/: hero_spawner.rs  lib.rs  skills.rs
loading/: Cargo.toml
loading/portal_assets/src/: lib.rs
loading/src/: lib.rs  resources.rs
messages/: Cargo.toml
portals/: Cargo.toml
portals/src/: enemy_details.rs  lib.rs
research/: Cargo.toml
research/src/: lib.rs  systems.rs  systems_scratch.rs
save_load/: Cargo.toml
save_load/src/: lib.rs  reconstruction.rs
skills/: Cargo.toml
skills/src/: lib.rs  systems.rs  tests.rs  unlocks.rs
src/: main.rs
states/: Cargo.toml
system_schedule/: Cargo.toml
tools/asset_editor/: Cargo.toml
tools/asset_editor/src/: editor.rs  file_generator.rs  main.rs  models.rs  monster_prefab.rs  research_graph.rs  traits.rs
tools/asset_editor/src/tabs/: common.rs  mod.rs  overview.rs  research.rs  research_balancing.rs  spawn_table.rs  ttk.rs
tools/enemy_prefab_editor/: Cargo.toml
tools/enemy_prefab_editor/src/: components.rs  editor.rs  main.rs  scene_builder.rs
tools/research_asset_editor/: Cargo.toml
tools/research_asset_editor/src/: editor.rs  file_generator.rs  main.rs  models.rs
ui/crafting_ui/: Cargo.toml
ui/crafting_ui/src/: lib.rs
ui/hero_ui/: Cargo.toml
ui/hero_ui/src/: lib.rs
ui/portal_ui/: Cargo.toml
ui/portal_ui/src/: lib.rs
ui/progress_bars/: Cargo.toml
ui/progress_bars/src/: lib.rs
ui/village_ui/: Cargo.toml
ui/village_ui/src/: lib.rs
unlocks/: Cargo.toml
unlocks/src/: assets.rs  compiler.rs  components.rs  events.rs  lib.rs  resources.rs  systems.rs  tests.rs
unlocks/tests/: repeatable_compliance.rs
village/: Cargo.toml
village/src/: equipment.rs  inventory.rs  lib.rs
wallet/: Cargo.toml
weapon_factory/: Cargo.toml
(+260 files in other folders)
