[package]
name = "forsaken_lands"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "components/divinity_components",
  "components/enemy_components",
  "components/hero_components",
  "components/portal_components",
  "components/shared_components",
  "components/village_components",
  "components/wallet_components",
  "core",
  "crafting",
  "events/crafting_events",
  "events/divinity_events",
  "events/hero_events",
  "game_assets",
  "game_assets/portal_assets",
  "heroes",
  "portals",
  "research",
  "resources/crafting_resources",
  "states",
  "system_schedule",
  "ui/crafting_ui",
  "ui/research_ui",
  "ui/resources_ui",
  "ui/portal_ui",
  "ui/enemy_encyclopedia",
  "ui/unlock_notification_ui",
  "ui/village_ui",
  "ui/widgets",
  "unlocks",
  "village",
  "wallet",
]

[workspace.dependencies]
bevy = "0.17"
rand = "0.9"
bevy_common_assets = { version = "0.14", features = ["ron"] }
core = { path = "core" }
crafting = { path = "crafting" }
crafting_events = { path = "events/crafting_events" }
crafting_resources = { path = "resources/crafting_resources" }
crafting_ui = { path = "ui/crafting_ui" }
divinity_components = { path = "components/divinity_components" }
divinity_events = { path = "events/divinity_events" }
enemy_components = { path = "components/enemy_components" }
enemy_encyclopedia = { path = "ui/enemy_encyclopedia" }
game_assets = { path = "game_assets" }
hero_components = { path = "components/hero_components" }
hero_events = { path = "events/hero_events" }
heroes = { path = "heroes" }
portal_assets = { path = "game_assets/portal_assets" }
portal_components = { path = "components/portal_components" }
portal_ui = { path = "ui/portal_ui" }
portals = { path = "portals" }
research = { path = "research" }
research_ui = { path = "ui/research_ui" }
resources_ui = { path = "ui/resources_ui" }
shared_components = { path = "components/shared_components" }
states = { path = "states" }
system_schedule = { path = "system_schedule" }
village = { path = "village" }
village_components = { path = "components/village_components" }
village_ui = { path = "ui/village_ui" }
unlock_notification_ui = { path = "ui/unlock_notification_ui" }
unlocks = { path = "unlocks" }
wallet = { path = "wallet" }
wallet_components = { path = "components/wallet_components" }
widgets = { path = "ui/widgets" }

[dependencies]
bevy.workspace = true
core.workspace = true
states.workspace = true
