[package]
name = "forsaken_lands"
version = "0.1.0"
edition = "2024"
resolver = "2"

[workspace]
members = [
  "blessings",
  "buildings",
  "components/buildings_components",
  "components/crafting_components",
  "components/divinity_components",
  "components/enemy_components",
  "components/hero_components",
  "components/portal_components",
  "components/shared_components",
  "components/unlock_states",
  "components/unlocks_components",
  "components/village_components",
  "core",
  "crafting",
  "events/crafting_events",
  "events/divinity_events",
  "events/enemy_events",
  "events/equipment_events",
  "events/hero_events",
  "events/unlocks_events",
  "events/weapon_factory_events",
  "game_assets/buildings_assets",
  "game_assets/portal_assets",
  "game_assets/recipes_assets",
  "game_assets/research_assets",
  "game_assets/unlocks_assets",
  "game_assets/weapon_assets",
  "growth",
  "heroes",
  "loading",
  "portals",
  "research",
  "resources/crafting_resources",
  "resources/enemy_resources",
  "resources/unlocks_resources",
  "save_load",
  "bonus_stats",
  "states",
  "system_schedule",
  "ui/blessings_ui",
  "ui/crafting_ui",
  "ui/enemy_encyclopedia",
  "ui/hero_ui",
  "ui/notification_ui",
  "ui/portal_ui",
  "ui/progress_bars",
  "ui/research_ui",
  "ui/resources_ui",
  "ui/village_ui",
  "ui/widgets",
  "unlocks",
  "village",
  "wallet",
  "weapon_factory",
]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
bevy_common_assets = { version = "0.15", features = ["ron"] }
blessings = { path = "blessings" }
blessings_ui = { path = "ui/blessings_ui" }
buildings = { path = "buildings" }
buildings_assets = { path = "game_assets/buildings_assets" }
buildings_components = { path = "components/buildings_components" }
core = { path = "core" }
crafting = { path = "crafting" }
crafting_components = { path = "components/crafting_components" }
crafting_events = { path = "events/crafting_events" }
crafting_resources = { path = "resources/crafting_resources" }
crafting_ui = { path = "ui/crafting_ui" }
divinity_components = { path = "components/divinity_components" }
divinity_events = { path = "events/divinity_events" }
enemy_components = { path = "components/enemy_components" }
enemy_resources = { path = "resources/enemy_resources" }
enemy_encyclopedia = { path = "ui/enemy_encyclopedia" }
enemy_events = { path = "events/enemy_events" }
equipment_events = { path = "events/equipment_events" }
growth = { path = "growth" }
hero_components = { path = "components/hero_components" }
hero_events = { path = "events/hero_events" }
hero_ui = { path = "ui/hero_ui" }
heroes = { path = "heroes" }
loading = { path = "loading" }
notification_ui = { path = "ui/notification_ui" }
portal_assets = { path = "game_assets/portal_assets" }
portal_components = { path = "components/portal_components" }
portal_ui = { path = "ui/portal_ui" }
portals = { path = "portals" }
progress_bars = { path = "ui/progress_bars" }
rand = "0.9"
recipes_assets = { path = "game_assets/recipes_assets" }
research = { path = "research" }
research_assets = { path = "game_assets/research_assets" }
research_ui = { path = "ui/research_ui" }
resources_ui = { path = "ui/resources_ui" }
save_load = { path = "save_load" }
shared_components = { path = "components/shared_components" }
bonus_stats = { path = "bonus_stats" }
states = { path = "states" }
system_schedule = { path = "system_schedule" }
unlock_states = { path = "components/unlock_states" }
unlocks = { path = "unlocks" }
unlocks_assets = { path = "game_assets/unlocks_assets" }
unlocks_components = { path = "components/unlocks_components" }
unlocks_events = { path = "events/unlocks_events" }
unlocks_resources = { path = "resources/unlocks_resources" }
village = { path = "village" }
village_components = { path = "components/village_components" }
village_ui = { path = "ui/village_ui" }
wallet = { path = "wallet" }
weapon_assets = { path = "game_assets/weapon_assets" }
weapon_factory = { path = "weapon_factory" }
weapon_factory_events = { path = "events/weapon_factory_events" }
widgets = { path = "ui/widgets" }

[dependencies]
bevy.workspace = true
core.workspace = true
states.workspace = true

[target.'cfg(debug_assertions)'.dependencies]
bevy = { workspace = true, features = ["dev"] }
