[package]
name = "blessings"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_common_assets = { workspace = true }
growth = { path = "../growth" }
serde.workspace = true
shared_components = { path = "../components/shared_components" }
unlocks_events.workspace = true
wallet = { path = "../wallet" }
