[package]
name = "buildings"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
buildings_assets.workspace = true
buildings_components.workspace = true
crafting_resources.workspace = true
shared_components.workspace = true
unlocks_events.workspace = true
wallet.workspace = true
