[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
crafting.workspace = true
crafting_events.workspace = true
crafting_resources.workspace = true
crafting_ui.workspace = true
enemy_encyclopedia.workspace = true
divinity_components.workspace = true
game_assets.workspace = true
hero_components.workspace = true
hero_events.workspace = true
heroes.workspace = true
portals.workspace = true
portal_assets.workspace = true
portal_ui.workspace = true
research.workspace = true
research_ui.workspace = true
resources_ui.workspace = true
shared_components.workspace = true
states.workspace = true
system_schedule.workspace = true
village.workspace = true
village_components.workspace = true
village_ui.workspace = true
wallet.workspace = true
widgets.workspace = true
