[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
blessings = { path = "../blessings" }
buildings.workspace = true
buildings_assets.workspace = true
buildings_components.workspace = true
crafting.workspace = true
crafting_events.workspace = true
crafting_resources.workspace = true
crafting_ui.workspace = true
enemy_encyclopedia.workspace = true
enemy_events.workspace = true
divinity_components.workspace = true
loading.workspace = true
hero_components.workspace = true
hero_events.workspace = true
heroes.workspace = true
portals.workspace = true
portal_assets.workspace = true
portal_ui.workspace = true
research.workspace = true
research_ui.workspace = true
resources_ui.workspace = true
shared_components.workspace = true
states.workspace = true
system_schedule.workspace = true
village.workspace = true
village_components.workspace = true
village_ui.workspace = true
wallet.workspace = true
widgets.workspace = true
notification_ui.workspace = true
unlocks.workspace = true
unlocks_assets.workspace = true
progress_bars.workspace = true
hero_ui.workspace = true
save_load.workspace = true
weapon_assets.workspace = true
weapon_factory.workspace = true
