[package]
name = "heroes"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
hero_components.workspace = true
enemy_components.workspace = true
system_schedule.workspace = true
hero_events.workspace = true
village_components.workspace = true
states.workspace = true
shared_components.workspace = true
bonus_stats_resources.workspace = true
unlocks_events.workspace = true
skill_components.workspace = true
skill_events.workspace = true
skills_assets.workspace = true
