[package]
name = "loading"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
crafting.workspace = true
crafting_resources.workspace = true
enemy_components.workspace = true
divinity_components.workspace = true
portal_assets.workspace = true
recipes_assets.workspace = true
research.workspace = true
states.workspace = true
unlocks.workspace = true
unlocks_assets.workspace = true
unlocks_events.workspace = true
unlocks_resources.workspace = true
village_components.workspace = true
village_resources.workspace = true
wallet.workspace = true
research_assets.workspace = true
weapon_assets.workspace = true
ron = "0.8"
serde.workspace = true
blessings.workspace = true
