[package]
name = "portals"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
divinity_components.workspace = true
divinity_events.workspace = true
game_assets.workspace = true
portal_components.workspace = true
states.workspace = true
system_schedule.workspace = true
enemy_components.workspace = true
hero_events.workspace = true
