[package]
name = "research"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_common_assets.workspace = true
serde.workspace = true
unlock_states.workspace = true
unlocks_events.workspace = true
unlocks_resources.workspace = true
wallet.workspace = true
system_schedule.workspace = true
states.workspace = true
research_assets.workspace = true
shared_components.workspace = true
