[package]
name = "save_load"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
chrono = "0.4"
crafting.workspace = true
divinity_components.workspace = true
hero_components.workspace = true
portal_components.workspace = true
research.workspace = true
states.workspace = true
unlocks_resources.workspace = true
village_components.workspace = true
wallet.workspace = true
