[package]
name = "village"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
divinity_components.workspace = true
divinity_events.workspace = true
equipment_events.workspace = true
loading.workspace = true
states.workspace = true
village_components.workspace = true
hero_components.workspace = true
enemy_components.workspace = true
hero_events.workspace = true
shared_components.workspace = true

