[package]
name = "totem"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
buildings_components.workspace = true
shared_components.workspace = true
unlocks_events.workspace = true
recipes_assets.workspace = true
skill_components.workspace = true
skills_assets.workspace = true
