[package]
name = "weapon_assets"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_common_assets.workspace = true
serde = { version = "1", features = ["derive"] }
hero_components.workspace = true
shared_components.workspace = true
bonus_stats = { path = "../../bonus_stats" }
