[package]
name = "asset_editor"
version = "0.1.0"
edition = "2024"

# This is a standalone tool, not part of the main workspace
[workspace]

[dependencies]
# GUI framework
eframe = "0.31"

# Ron serialization
ron = "0.10"
serde = { version = "1.0", features = ["derive"] }

# File dialogs
rfd = "0.15"

# Regex for parsing RON files
regex = "1.0"

portal_assets = { path = "../../game_assets/portal_assets" }
research_assets = { path = "../../game_assets/research_assets" }
unlocks_assets = { path = "../../game_assets/unlocks_assets" }
unlocks_components = { path = "../../components/unlocks_components" }
divinity_components = { path = "../../components/divinity_components" }
bevy = { version = "0.17", default-features = false, features = [] }

