[package]
name = "crafting_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
crafting.workspace = true
crafting_events.workspace = true
crafting_resources.workspace = true
recipes_assets.workspace = true
states.workspace = true
unlock_states.workspace = true
wallet.workspace = true
widgets.workspace = true
