[package]
name = "hero_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
widgets = { path = "../widgets" }
states = { path = "../../states" }
hero_components = { path = "../../components/hero_components" }
village_components = { path = "../../components/village_components" }
