[package]
name = "hero_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
equipment_events.workspace = true
hero_components.workspace = true
shared_components.workspace = true
states.workspace = true
widgets.workspace = true
bonus_stats.workspace = true
skills_assets.workspace = true
skill_components.workspace = true
