[package]
name = "portal_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
divinity_components.workspace = true

portal_components.workspace = true
states.workspace = true
village_components.workspace = true
wallet.workspace = true
widgets.workspace = true
shared_components.workspace = true
unlocks_assets.workspace = true
