[package]
name = "village_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
crafting.workspace = true
hero_components.workspace = true
hero_ui.workspace = true
recipes_assets.workspace = true
research.workspace = true
shared_components.workspace = true
states.workspace = true
unlock_states.workspace = true
village_components.workspace = true
buildings_components.workspace = true
wallet.workspace = true
widgets.workspace = true
research_assets.workspace = true
blessings.workspace = true
growth.workspace = true
bonus_stats.workspace = true
skill_components.workspace = true
skills_assets.workspace = true
